Replacing 'Freerunner' with 'FreeRunner'

--- a/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
@@ -4,14 +4,14 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc; width:75% " |  
  <p align="left">
-Gracias por comprar esta versión de desarrollo del Neo FreeRunner. El teléfono [[Neo FreeRunner]] es la segunda plataforma de hardware pensada para Openmoko. Esta guía te ayudará a conocer tu Neo Freerunner y como empezar a utilizar tu Neo FreeRunner.</p>
+Gracias por comprar esta versión de desarrollo del Neo FreeRunner. El teléfono [[Neo FreeRunner]] es la segunda plataforma de hardware pensada para Openmoko. Esta guía te ayudará a conocer tu Neo FreeRunner y como empezar a utilizar tu Neo FreeRunner.</p>
 
 <p align="left">
 Algunas de las Preguntas Mas Frecuentes para nuevos propietarios están contestadas en [[FAQ#Getting_Started_with_your_Neo_FreeRunner]].
 </p>
 
 ! style="background:#fcfcfc; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Embalaje Neo FreeRunner]]
+[[Image:FreeRunner box.png|200px|thumb|Embalaje Neo FreeRunner]]
 |}
 
 
@@ -51,7 +51,7 @@ Algunas de las Preguntas Mas Frecuentes para nuevos propietarios están contesta
 # Desbloquea el porta tarjetas de la SIM separando el clip metálico con la uña hacia el conector USB. Hazlo con cuidado estas partes son delicadas y pueden ser dañadas si se fuerzan en la dirección equivocada.
 # Levanta el porta tarjetas SIM.
 # El porta tarjetas de la Micro-SD esta sujeta por un enganche a cada lado, es mas fácil abrirlo desenganchando un lado cada vez que levantándolo desde el medio, levantándolo desde el medio aumenta la presión de los enganches, un pequeño destornillador o un cuchillo puede ser usado para los enganches.
-# Inserta la Micro-SD en su porta tarjetas. Date cuenta que el interior de la parte metálica del porta tarjetas hay unas pequeñas pestañas para sujetar la tarjeta.Desliza la tarjeta entre esas pestañas antes de cerrar el porta tarjetas. Fíjate que los contactos eléctricos deben estar hacia abajo y al borde del Neo Freerunner.
+# Inserta la Micro-SD en su porta tarjetas. Date cuenta que el interior de la parte metálica del porta tarjetas hay unas pequeñas pestañas para sujetar la tarjeta.Desliza la tarjeta entre esas pestañas antes de cerrar el porta tarjetas. Fíjate que los contactos eléctricos deben estar hacia abajo y al borde del Neo FreeRunner.
 # Cierra el porta tarjetas de la Micro-SD, asegurando que los dos enganches estén bien fijados.
 # Inserta la tarjeta SIM en el porta tarjetas SIM, prestando atención en deslizara entre las dos pestañas metálicas. Los contactos deben estar hacia abajo y la esquina biselada debe quedar en la parte del conector del la antena exterior GPS.
 # Cierra el porta tarjetas SIM y desliza el clip metálico hacia el conector de la antena exterior del GPS del FreeRunner.
@@ -203,7 +203,7 @@ Para restaurar de manera manual la configuración desde uno de estos archivos,
  alsactl -f ''ruta-al-archivo-configuracion'' restore
 
 Una manera de incrementar el volumen del micrófono es la siguiente:
-# ssh al Freerunner
+# ssh al FreeRunner
 # vi /usr/share/openmoko/scenarios/gsmhandset.state
 # busca "Mic2"
 # cambio a  "value 3"
@@ -216,7 +216,7 @@ Desconecta y conecta el conector del manos libres comprobando que el archivo de 
 Para controlar manualmente el cambio entre Altavoz y manos libres:
 Ejecuta el alsamixer, desplaza hacia la derecha hasta encontrar "Amp Spk" y deshabilitalo (m), entonces el sonido irá por los dos canales del manos libres y no por el altavoz.
 
-[[Freerunner_Hardware_Issues]]
+[[FreeRunner_Hardware_Issues]]
 
 === Accediendo a la tarjeta microSD ===
 
@@ -239,7 +239,7 @@ Hay tres capas de software en el FreeRunner:
 * Kernel: El kernel Linux
 * Sistema de archivos raíz (rootfs): El resto del sistema
 
-Para mantener el FreeRunner actualizado con las últimas funcionalidades y reparaciones de errores, se recomienda actualizar el software de manera regular. Hay principalmente dos maneras de realizar la actualización: a través del Gestor de paquetes opkg o flasheando manualmente el dispositivo. De momento, usar el gestor de paquetes es suficiente, no necesitas aprender   [[Booting the Neo FreeRunner|Métodos de arranque del Neo Freerunner]] y [[Flashing the Neo FreeRunner| Flashear el Neo FreeRunner]] todavía, aunque deberías tener en cuenta lo siguiente:
+Para mantener el FreeRunner actualizado con las últimas funcionalidades y reparaciones de errores, se recomienda actualizar el software de manera regular. Hay principalmente dos maneras de realizar la actualización: a través del Gestor de paquetes opkg o flasheando manualmente el dispositivo. De momento, usar el gestor de paquetes es suficiente, no necesitas aprender   [[Booting the Neo FreeRunner|Métodos de arranque del Neo FreeRunner]] y [[Flashing the Neo FreeRunner| Flashear el Neo FreeRunner]] todavía, aunque deberías tener en cuenta lo siguiente:
 
 uBoot, el kernel y el rootfs pueden ser flasheados para actualizarlos.Para uBoot es la única manera. La ventaja de actualizar el kernel a través de flashear manualmente respecto a utilizar opkg parece ser la velocidad. La principal desventaja de actualizar el rootfs a través del flasheo es que elimina todas las modificaciones que hayas hecho al teléfono previamente, incluyendo los contenidos del /home. Deberás realizar un backup de todo lo que quieras conservar y tengas en la NAND a por ejemplo la tarjeta microSD, otro consejo útil es mover el directorio /home a la micro SD.
 
