Replacing 'Freerunner' with 'FreeRunner'

--- a/Manuals%2FNeo_FreeRunner%2Ffr.mw
+++ b/Manuals%2FNeo_FreeRunner%2Ffr.mw
@@ -5,7 +5,7 @@
  <div align="left">
 Merci d'avoir acheté cette version du Neo FreeRunner pour les développeurs. Le téléphone [[Neo FreeRunner]] est la deuxième plate-forme matérielle à utiliser Openmoko. Ce guide vous aidera à mieux connaître votre Neo FreeRunner et commencer à utiliser votre Neo FreeRunner.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|La Boîte Neo FreeRunner]]
+[[Image:FreeRunner box.png|200px|thumb|La Boîte Neo FreeRunner]]
 |}
 
 == Ce que contient la boîte==
@@ -57,23 +57,23 @@ Merci d'avoir acheté cette version du Neo FreeRunner pour les développeurs. Le
 
 ===Installation de la carte Micro SD, de la carte SIM, et de la batterie ===
 
-# Retirez le capot arrière du Néo Freerunner en maintenant le Neo Freerunner par le côté, et utiliser votre ongle pour détacher le capot arrière au niveau de la fente en haut
+# Retirez le capot arrière du Néo FreeRunner en maintenant le Neo FreeRunner par le côté, et utiliser votre ongle pour détacher le capot arrière au niveau de la fente en haut
 # Identifier l'emplacement combiné de la carte SIM et de la carte SD au fond du compartiment à piles
 # Déverrouiller la carte SIM en faisant glisser la languette de métal vers le bas (vers la prise USB) avec votre ongle. Soyez prudent car ces languettes sont délicates et pourraient être endommagées en forçant dans la mauvaise direction. Les propriétaires du Neo 1973 devraient accorder une attention particulière, puisque la direction pour l'ouverture est opposé à celle du Neo 1973.
 # Soulevez la carte SIM
 # Le compartiment Micro-SD de la carte est maintenue en place par un verrouillage par languette de chaque côté. Il est plus facile d'ouvrir le compartitement Micro-SD de la carte par la libération de ces languettes une par une plutôt que par la levée par le milieu, comme la levée par le milieu tend à augmenter la pression de fermeture. Un petit tournevis ou un couteau peut être utilisé pour:
-# Insérez la carte Micro SD dans le compartiment Micro SD de la carte. Notez que les contacts doivent être dirigés vers le bas, et sont sur le front du Néo Freerunner:
+# Insérez la carte Micro SD dans le compartiment Micro SD de la carte. Notez que les contacts doivent être dirigés vers le bas, et sont sur le front du Néo FreeRunner:
 # Fermer le compartiment Micro SD de la carte, en vous assurant que les deux doigts sont bien fermé:
 # Insérez la carte SIM dans le compartiment de la carte SIM, en prenant soin de glisser les deux languettes de métal dans la couverture. Note que les languettes doivent être dirigés vers le bas, et que le chanfrein (le coin coupé) sera plus proche de l'emplacement de l'antenne GPS externe:
 # Fermer le compartiment de la carte SIM et verrouillez-le en glissant la languette vers l'emplacement de l' antenne GPS externe:
 # Insérez la batterie dans son compartiment, en alignant les contacts de la batterie avec ceux de son compartiment. Insérez en premier le côté possédant les contacts.
 # Remettez le couvercle
 
-===Allumer le Neo Freerunner===
+===Allumer le Neo FreeRunner===
 
-====Charger the Neo Freerunner====
+====Charger the Neo FreeRunner====
 
-Lors de la première utilisation du Neo Freerunner, vous devez charger complétement la batterie. La batterie peut être chargé avec le chargeur fourni, ou part un port USB capable de fournir 500mA d'un ordinateur.
+Lors de la première utilisation du Neo FreeRunner, vous devez charger complétement la batterie. La batterie peut être chargé avec le chargeur fourni, ou part un port USB capable de fournir 500mA d'un ordinateur.
 La charge à 100mA prend de 6 à 12 heures et celle à 500mA prend de 1 à 2 heures. (from [http://openmoko.togaware.com/survivor/Charging.html openmoko.togaware.com])
 
 Vous pouvez démarrer votre Neo FreeRunner des façons suivantes:
@@ -149,15 +149,15 @@ Lorsque l'écran est verrouillé, vous voyez un graphique vert du style Matrix a
 ==Flasher le Neo FreeRunner==
 Comme le développement d'Openmoko continu, Openmoko publie réguliérement des versions mises à jour du système de fichier racine Openoko, du noyau, et de[[Bootloader|U-Boot]]. Ils peuvent être programmé dans la mémoire Flash du Neo FreeRunner. Vous pouvez utiliser le cable USB et l'outil fourni par Openmoko pour flasher le Neo FreeRunner.
 
-{{note|L'équipe du département logiciel d'Openmoko construit des images chaque jour. Si vous souhaitez utiliser les dernières images, vous pouvez les téléchargé à partir de la construction journalière, mais nous vous recommandons de télécharger des images plus stable à partir de http://downloads.openmoko.org/releases/Freerunner/. Ces Images ont été vérifié par l'équipe de test.}}
+{{note|L'équipe du département logiciel d'Openmoko construit des images chaque jour. Si vous souhaitez utiliser les dernières images, vous pouvez les téléchargé à partir de la construction journalière, mais nous vous recommandons de télécharger des images plus stable à partir de http://downloads.openmoko.org/releases/FreeRunner/. Ces Images ont été vérifié par l'équipe de test.}}
 
 ===Etape 1. Télécharger DFU-util===
 
-Vous pouvez télécharger l'outil qui permet de flasher le Neo Freerunner à partir de: 
-http://downloads.openmoko.org/releases/Freerunner/dfu-util
+Vous pouvez télécharger l'outil qui permet de flasher le Neo FreeRunner à partir de: 
+http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 Sur l'hôte GNU/Linux, vous pouvez utiliser la ligne de commande suivante pour télécharger dfu-util:
- wget http://downloads.openmoko.org/releases/Freerunner/dfu-util
+ wget http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 Ensuite vous devez changer les droits:
  chmod a+x dfu-util
@@ -165,7 +165,7 @@ Ensuite vous devez changer les droits:
 ===Etape 2. Flasher le noyau===
 
 Vous pouvez télécharger le noyau à partir de 
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/FreeRunner/
 
 Taper la ligne de commande suivante dans le terminal d'un hôte GNU/Linux. Sur certains systèmes vous aurez besoins d'être root.
  ./dfu-util -a (partion name) -R -D (download image file name)
@@ -196,7 +196,7 @@ Done!
 
 ===Step 3. Flasher le système de fichier Racine ===
 Vous pouvez télécharger le système de fichier racine à partir de :
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/FreeRunner/
 
 
 Taper la ligne de commande suivante dans le terminal d'un hôte GNU/Linux. Sur certains systèmes vous aurez besoins d'être root.
