--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -3,9 +3,9 @@
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #cccccc; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:75% " |  
  <div align="left">
-Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il telefono [[Neo FreeRunner]] è la seconda piattaforma hardware che sfrutta nativamente [[Openmoko/it]]. Questa guida ti aiuterà a conoscere il tuo Neo Freerunner e ti indicherà come inizare ad usarlo.
+Grazie per aver comprato questa versione da Sviluppatori del Neo FreeRunner. Il telefono [[Neo FreeRunner]] è la seconda piattaforma hardware che sfrutta nativamente [[Openmoko/it]]. Questa guida ti aiuterà a conoscere il tuo Neo FreeRunner e ti indicherà come inizare ad usarlo.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|La confezione del Neo Freerunner]]
+[[Image:FreeRunner box.png|200px|thumb|La confezione del Neo FreeRunner]]
 |}
 
 == Contenuti della Confezione ==
@@ -24,7 +24,7 @@ Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il 
 |}
 </div>
 
-== Iniziare a Conoscere il Neo Freerunner ==
+== Iniziare a Conoscere il Neo FreeRunner ==
 <div align-center>
 <table width="80%" style="clear: both; border: 1px solid #ffffff; border-collapse: collapse; padding: 0.2em; margin: 0; font-size: 100%; margin: 0 1px;">
 <tr valign="top" style="background: #ffffff">
@@ -53,22 +53,22 @@ Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il 
 </div>
 
 === Inserire la scheda Micro-SD, la SIM e la Batteria ===
-# Rimuovere la cover posteriore del Neo Freerunner, tenendo il dispositivo per i lati e usando l'unghia fare leva nel taglio in cima al Neo Freerunner.
+# Rimuovere la cover posteriore del Neo FreeRunner, tenendo il dispositivo per i lati e usando l'unghia fare leva nel taglio in cima al Neo FreeRunner.
 # Ora dovreste essere in grado di riconoscere il sistema che blocca la scheda SIM e la memoria Micro-SD, al margine con lo scomparto per la batteria.
 # Sbloccare il fissa scheda SIM facendo scivolare con l'unghia la parte metallica in giù, in direzione dell'entrata USB. Prestare attenzione poichè queste parti sono delicate e potrebbero essere danneggiate forzandole nella direzione sbagliata.
 # Sollevare il fissa scheda SIM.
 # La memoria Micro-SD è tenuta ferma da due fermagli su ambo i lati. È più facile aprire l'alloggiamento per la Micro-SD sbloccando i fermagli uno alla volta, anziché tirandolo dal mezzo, poiché tende ad aumentare la pressione sui fermagli laterali. Un cacciavite o un piccolo coltello possono aiutare in questa operazione.
-# Inserire la memoria Micro-SD dentro all'apposito spazio. Nota che i contatti elettrici devono rivolgersi verso il basso e vicino al bordo del Neo Freerunner.
+# Inserire la memoria Micro-SD dentro all'apposito spazio. Nota che i contatti elettrici devono rivolgersi verso il basso e vicino al bordo del Neo FreeRunner.
 # Chiudere il fissa scheda Micro-SD, assicurandosi che entrambi i fermagli siano ben agganciati.
 # Inserire la scheda SIM dentro il fissa scheda SIM, facendo attenzione a farla scivolare dentro le due linguette metalliche. Nota che i contatti metallici devono essere rivolti verso il basso e l'angolo tagliato deve essere in direzione della presa dell'antenna GPS esterna.
-# Chiudere il blocca scheda SIM e bloccarlo facendo scivolare la parte metallica in direzione della presa per l'antenna GPS esterna del Neo Freerunner.
+# Chiudere il blocca scheda SIM e bloccarlo facendo scivolare la parte metallica in direzione della presa per l'antenna GPS esterna del Neo FreeRunner.
 # Inserire la batteria nel compartimento per la batteria, allineando i contatti elettrici della batteria con quelli del comparto. Inserire prima il lato con i contatti elettrici.
-# Rimettere la cover posteriore del Neo Freerunner.
+# Rimettere la cover posteriore del Neo FreeRunner.
 
 [[Image:FR_SIM_SD_open.jpg|457px|thumb|Alloggiamenti della SIM e della SD aperti, con le rispettive schede in sede|center]]
 
-=== Ricaricare il Neo Freerunner ===
-Quando si usa il Neo Freerunner per la prima volta, bisogna caricare la batteria completamente. La batteria può essere caricata con il caricatore fornito (a 1000mA) o con una porta USB che abbia la capacità di fornire 500mA di corrente. La maggior parte dei computer sarà in grado di caricare il Neo Freerunner senza problemi.
+=== Ricaricare il Neo FreeRunner ===
+Quando si usa il Neo FreeRunner per la prima volta, bisogna caricare la batteria completamente. La batteria può essere caricata con il caricatore fornito (a 1000mA) o con una porta USB che abbia la capacità di fornire 500mA di corrente. La maggior parte dei computer sarà in grado di caricare il Neo FreeRunner senza problemi.
 
 Caricando a 100mA ci vorranno 6-12 ore, invece a 500mA ci vorrà 1-2 ore. ([http://openmoko.togaware.com/survivor/Charging.html openmoko.togaware.com])
 
@@ -76,7 +76,7 @@ Caricando a 100mA ci vorranno 6-12 ore, invece a 500mA ci vorrà 1-2 ore. ([http
 ====Power====
 Premendo il bottone Power si uscirà dall'applicazione corrente.
 
-Tenendo premuto il bottone Power invece apparirà un menù che vi permetterà di accendere e spegnere il GSP, WIFI, GSM, l'antenna Bluetooth, e anche spegnere il Neo Freerunner.
+Tenendo premuto il bottone Power invece apparirà un menù che vi permetterà di accendere e spegnere il GSP, WIFI, GSM, l'antenna Bluetooth, e anche spegnere il Neo FreeRunner.
 
 ==== Aux ====
 Premendo per un secondo il bottone Aux apparirà un menù che vi permetterà di:
@@ -143,16 +143,16 @@ Questa è montata in /media/card
 
 === Importare i contatti===
 
-Se puoi esportare i tuoi contatti nel formato VCard, sia in file multipli, sia in un unico file che li contiene tutti, puoi usare lo script della schermata [[Import Vcf Contacts]] per portarli tutti sul Neo Freerunner.
+Se puoi esportare i tuoi contatti nel formato VCard, sia in file multipli, sia in un unico file che li contiene tutti, puoi usare lo script della schermata [[Import Vcf Contacts]] per portarli tutti sul Neo FreeRunner.
 
 === Dove andare quando le cosa vanno male ===
 
 Puoi chiedere aiuto sulla mailing list di supporto: maggiori informazioni su https://lists.openmoko.org/mailman/listinfo/support
 
-[[Freerunner_Hardware_Issues]]
+[[FreeRunner_Hardware_Issues]]
 
-== Connettere il Neo Freerunner alla Rete via USB ==
-Connettere il Neo Freerunner a un computer GNU/Linux con il cavo USB. Per fare questo con Mac OS X, riferitevi a [[MacOS_X]]; invece per fare ciò con Windows XP e Vista, riferitevi a [[Neo1973_and_Windows]] (che funziona anche per il Neo Freerunner). Dopo il boot nell'immagine di Openmoko avrete una nuova interfaccia, usb0, sul vostro computer GNU/Linux.
+== Connettere il Neo FreeRunner alla Rete via USB ==
+Connettere il Neo FreeRunner a un computer GNU/Linux con il cavo USB. Per fare questo con Mac OS X, riferitevi a [[MacOS_X]]; invece per fare ciò con Windows XP e Vista, riferitevi a [[Neo1973_and_Windows]] (che funziona anche per il Neo FreeRunner). Dopo il boot nell'immagine di Openmoko avrete una nuova interfaccia, usb0, sul vostro computer GNU/Linux.
 
 ===== Metodo Manuale =====
 Digitare i seguenti comandi in un terminale GNU/Linux:
@@ -199,7 +199,7 @@ Ora sarà possibile connettersi al proprio telefono usando il seguente comando:
 Il comando precedente ti fornisce solamente una connessione con una Shell sicura con il tuo dispositivo Openmoko, non ti permette di collegare il tuo dispositivo a Internet. Se ti interessa collegare il tuo dispositivo a Internet leggi alla sezione [[USB_Networking]].
 
 ===== Condividere la tua connessione ad Internet via USB =====
-Per accedere a internet con il Neo Freerunner attraverso una connesione USB, avrai bisogno di fare alcune modifiche al PC attraverso cui ci si sta connettendo.
+Per accedere a internet con il Neo FreeRunner attraverso una connesione USB, avrai bisogno di fare alcune modifiche al PC attraverso cui ci si sta connettendo.
 
 In Ubuntu:
 
@@ -280,7 +280,7 @@ Se stai utilizzanto il NetworkManger, riavvialo e attiva il dispositivo USB dal 
 
 =====Aggiornare il DNS=====
 
-Una volta che il tuo PC è configurato, modifica /etc/network/interfaces sul tuo Neo Freerunner e cambia il codice da così:
+Una volta che il tuo PC è configurato, modifica /etc/network/interfaces sul tuo Neo FreeRunner e cambia il codice da così:
 
  iface usb0 inet static
         address 192.168.0.202
@@ -305,11 +305,11 @@ Nell'immagine caricata di fabbrica OM2007.2, digita quanto segue per riavviare l
 
  /etc/rc0.d/K40networking restart
 
-Se continui a non essere in grado di andare su internet con il tuo Neo Freerunner, e stai usando Mandriva e/o hai la tua LAN su 192.168.0.0/24, [[User:Linuxpaul|questa pagina]] dovrebbe aiutarti.
+Se continui a non essere in grado di andare su internet con il tuo Neo FreeRunner, e stai usando Mandriva e/o hai la tua LAN su 192.168.0.0/24, [[User:Linuxpaul|questa pagina]] dovrebbe aiutarti.
 
 ==L'Architettura==
 
-Tre livelli compongono il software del Neo Freerunner:
+Tre livelli compongono il software del Neo FreeRunner:
 
 ===U-Boot===
 
@@ -325,11 +325,11 @@ Il resto del sistema.
 
 ==Updating the software==
 
-Per aggiornare il Neo Freerunner con le ultime novità e correzioni di sicurezza, ed è preferibile aggiornarlo periodicamente. Sono due i metodi principali per farlo:
+Per aggiornare il Neo FreeRunner con le ultime novità e correzioni di sicurezza, ed è preferibile aggiornarlo periodicamente. Sono due i metodi principali per farlo:
 
 ===opkg===
 
-Dando per scontato che il vostro Neo Freerunner possa accedere a internet (nel caso guarda sopra), si può aggiornare il kernel e gli altri pacchetti con:
+Dando per scontato che il vostro Neo FreeRunner possa accedere a internet (nel caso guarda sopra), si può aggiornare il kernel e gli altri pacchetti con:
 
  # opkg update
  # opkg upgrade
@@ -360,7 +360,7 @@ U-Boot, il kernel e il filesystem root possono essere aggiornati, scrivento sull
 Lo svantaggio di flashare il filesystem root è che cancella tutte le modifiche locali, compresa la /home. Se però la vostra /home è sopra la memoria Micro-SD, questo non è più un problema.
 
 == Modifiche all'immagine 2007.2 ==
-L'immagine standard [[Openmoko2007.2]] inserita nei Neo Freerunner dopo la loro produzione è solo essenziale. Ad esempio non è mostrato l'orologio e le icone. Così è come potete cambiarli:
+L'immagine standard [[Openmoko2007.2]] inserita nei Neo FreeRunner dopo la loro produzione è solo essenziale. Ad esempio non è mostrato l'orologio e le icone. Così è come potete cambiarli:
 
  # dbus-launch gconftool-2 -t boolean -s /desktop/poky/interface/reduced false
  # /etc/init.d/xserver-nodm restart
@@ -438,8 +438,8 @@ Quindi sul Neo FreeRunner digitare:
 
 Ci sono un mucchio di applicazioni che potete installare. Controllate i [[Repositories]] per una lista dei pacchetti.
 
-== Effettuare il Boot sul Neo Freerunner ==
-Potete avviare il vostro Neo Freerunner nei seguenti modi:
+== Effettuare il Boot sul Neo FreeRunner ==
+Potete avviare il vostro Neo FreeRunner nei seguenti modi:
 
 : [[Image:Circle２.gif|10px]]    Potete avviarlo direttamente nell'immagine Openmoko.
 
@@ -483,7 +483,7 @@ Premere e mantenere premuto il bottone Power e poi il bottone AUX per circa 5-8 
 </td>
 <td style="width: 10px; white-space: nowrap; padding: 4px 1em 0 0.5em; border-right: 1px solid #ffffff;">[[Image:Menu6.jpg|200px|right|thumb]]</td><td style="padding: 1px 1em 0; background: #eeeeee;">
 
-Premere e mantenere premuto il bottone AUX e poi il bottone Power. Quindi rilasciare il bottone AUX. Dovrebbe apparire il menu di boot della memoria Flash NOR. Questa opzione è usata solitamente dagli sviluppatori, o quando si aggiorna il Freerunner. Se non si riesce ad entrare nell'U-Boot della NAND, si riuscirà comunque ad entrare il quello della memoria Flash NOR.
+Premere e mantenere premuto il bottone AUX e poi il bottone Power. Quindi rilasciare il bottone AUX. Dovrebbe apparire il menu di boot della memoria Flash NOR. Questa opzione è usata solitamente dagli sviluppatori, o quando si aggiorna il FreeRunner. Se non si riesce ad entrare nell'U-Boot della NAND, si riuscirà comunque ad entrare il quello della memoria Flash NOR.
 </td></tr></table>
 </div>
 
@@ -503,7 +503,7 @@ Premere e mantenere premuto il bottone AUX e poi il bottone Power. Quindi rilasc
 {{note| Il termine ''Entrare'' usato in questo contesto significa accendere il dispositivo con i metodi descritti, e portarlo al menu U-Boot. Per evitare il boot automatico del dispositivo, premere il bottone AUX per muovere la barra di selezione. Notare anche che il dispositivo ''non'' si spegnerà automaticamente durante la procedura di aggiornamento.}}
 
 == Aggiornare il Neo FreeRunner ==
-Dato che Openmoko è in continuo sviluppo, Openmoko rilascia delle versioni aggiornate del filesystem root, del kernel e del [[Bootloader| U-Boot]]. Questi possono essere inseriti nella memoria Flash del Neo Freerunner. Puoi usare il cavo USB e il programma forniti per aggiornare il tuo Neo Freerunner.
+Dato che Openmoko è in continuo sviluppo, Openmoko rilascia delle versioni aggiornate del filesystem root, del kernel e del [[Bootloader| U-Boot]]. Questi possono essere inseriti nella memoria Flash del Neo FreeRunner. Puoi usare il cavo USB e il programma forniti per aggiornare il tuo Neo FreeRunner.
 
 {{note|L'Openmoko software team rilascia immagini del sistema aggiornate giornalmente. Se vuoi usare le ultime immagini, puoi scaricarle dal ''daily build'', ma noi raccomandiamo di usare l'immagine più stabile, scaricabile da http://downloads.openmoko.org/releases/. Le immagini presenti sono testate dal team di test.
 
@@ -521,7 +521,7 @@ Successivamente dovete cambiare i permessi al file:
 
 === Step 2. Preparare il Neo FreeRunner===
 
-Spegnere il FreeRunner se è acceso ed entrare nell'U-Boot della NOR Flash. Per svolgere l'aggiornamento il Neo Freerunner ha bisogno di essere dentro l'U-Boot.
+Spegnere il FreeRunner se è acceso ed entrare nell'U-Boot della NOR Flash. Per svolgere l'aggiornamento il Neo FreeRunner ha bisogno di essere dentro l'U-Boot.
 
 [[Image:menu15.jpg|thumb|Entra nell'U-Boot della NOR Flash, connetti il tuo Neo con il sistema Linux attraverso il cavo USB]]
 
@@ -583,7 +583,7 @@ Quando l'aggiornamento sarà completo, sul terminale del vostro PC sarà mostrat
  Done!
 
 == Appendice ==
-Se ti interessa sapere altri riguardo il Neo Freerunner allora puoi suguire questi argomenti:
+Se ti interessa sapere altri riguardo il Neo FreeRunner allora puoi suguire questi argomenti:
 
 * [[GTA02 Openness]]
 * [[Neo FreeRunner]]
