Replacing 'Freerunner' with 'FreeRunner'

--- a/Manuals%2FNeo_FreeRunner%2Fnl.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fnl.mw
@@ -43,7 +43,7 @@
 <tr valign="top" style="background: #ffffff">
 <td style="width: 50%; padding-left: 0.5em;">
 </td>
-<td style="width: 50%; white-space: nowrap; padding: 4px 1em 0 0.5em; border-right: 1px solid #ffffff;">[[Image:menu13.jpg|233px|thumb|open de Freerunner langs hier |center]]</td><td style="padding: 1px 1em 0; background: #ffffff;">
+<td style="width: 50%; white-space: nowrap; padding: 4px 1em 0 0.5em; border-right: 1px solid #ffffff;">[[Image:menu13.jpg|233px|thumb|open de FreeRunner langs hier |center]]</td><td style="padding: 1px 1em 0; background: #ffffff;">
 [[Image:menu14.jpg|250px|thumb|Open|center]]</td></tr></table>
 </div>
 
@@ -54,18 +54,18 @@
 # Maak de SIM kaart houder vrij door het metalen clipje naar beneden te doen, in de richting van de USB aansluiting. Gebruik daarvoor uw vingernagel. Wees wel voorzichtig, deze onderdelen zijn gevoelig en kunnen beschadigd raken door hen in de verkeerde richting te forceren.
 # De de SIM kaart houder omhoog.
 # De Micro-SD kaart houder zit onder de simkaart houder. De bovenkant van het mechanisme zit tegen de zijkant aan van het apparaat. De makkelijste manier om het open te maken is door eerst de zijkantjes iets omhoog te halen, want als je het via het midden doet komt er hoge druk op de pinnentjes te staan. Een smalle schroevendraaier of mesje kan gebruikt worden om dit te openen. 
-# Doe de Micro-SD kaart in het rechtopstaand klepje. Let op dat de leeskant van de Micro-SD kaart aan de onderkant zit als je hem in je Neo Freerunner stopt.
+# Doe de Micro-SD kaart in het rechtopstaand klepje. Let op dat de leeskant van de Micro-SD kaart aan de onderkant zit als je hem in je Neo FreeRunner stopt.
 # Sluit het Micro-SD kaart klepje, en let op dat beide pinnetjes goed vast zitten.
 # Doe de SIM kaart in de SIM card houder, let op dat je de SIM kaart tussen de twee metalen houdertjes doet.  Let op dat de chip van de SIM-Kaart naar beneden wijst als je hem in je SIM kaart houder stopt, en let ook op dat de kant waar het hoekje anders is het dichtst bij de GPS antenne zit.
 # Sluit het SIM kaart klepje en lock het door middel van het metalen klepje naar de GPS Antenne te schuiven.
 # Plaats de batterij, let ook hier op dat de eleketronische delen contact maken met elkaar.  Zorg ervoor dat de elektrische deeltjes kant als eerste erin word geplaatst
 # Plaats de achterzijde terug op de FreeRunner.
 
-===de Neo Freerunner opstarten===
+===de Neo FreeRunner opstarten===
 
-====Opladen van de Neo Freerunner====
+====Opladen van de Neo FreeRunner====
 
-Wanneer je de Neo Freerunner voor de eerste keer gebruikt, kun je de batterij best volledig opladen. De batterij kan opgeladen worden door middel van de bijgeleverde lader of via de USB kabel, als de USB poort in staat is om 500mA te leveren. De meeste computers zijn in staat de Freerunner op te laden via hun USB poorten.
+Wanneer je de Neo FreeRunner voor de eerste keer gebruikt, kun je de batterij best volledig opladen. De batterij kan opgeladen worden door middel van de bijgeleverde lader of via de USB kabel, als de USB poort in staat is om 500mA te leveren. De meeste computers zijn in staat de FreeRunner op te laden via hun USB poorten.
 
 Opladen met 100mA duurt ongeveer 6 tot 12 uren. Opladen met 500mA duurt 1 tot 2 uren. (from [http://openmoko.togaware.com/survivor/Charging.html openmoko.togaware.com])
 
@@ -77,7 +77,7 @@ Kies de opstartprocedure voor uw Neo FreeRunner:
 
 : [[Image:Circle２.gif|10px]]    Opstarten naar U-Boot via NOR Flash.
 
-Wanneer de Freerunner opgestart wordt via NAND en NOR Flash laat je toe de kernel en het filesysteem up te daten.
+Wanneer de FreeRunner opgestart wordt via NAND en NOR Flash laat je toe de kernel en het filesysteem up te daten.
 
 ====Opstarten via de Openmoko Image====
 
