Replacing 'Freerunner' with 'FreeRunner'

--- a/Manuals%2FNeo_FreeRunner%2Fpl.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fpl.mw
@@ -5,7 +5,7 @@
  <div align="left">
 Dziękujemy za zakup developerskiej wersji Neo FreeRunnera. Telefon Neo FreeRunner jest drugą platformą sprzętową korzystającą z Openmoko. Ten przewodnik pozwoli Ci poznać Neo FreeRunnera i przedstawi, jak rozpocząć z nim pracę.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Zapakowany Neo FreeRunner]]
+[[Image:FreeRunner box.png|200px|thumb|Zapakowany Neo FreeRunner]]
 |}
 
 == Zawartość opakowania ==
@@ -261,7 +261,7 @@ Then on the FreeRunner:
 
 Istnieje cała masa aplikacji, które możesz zainstalować, sprawdź [[Repositories]] w celu przejrzenia listy dostępnych paczek.
 
-==Pierwsze botowanie Neo Freerunner'a==
+==Pierwsze botowanie Neo FreeRunner'a==
 
 Możesz uruchomić Neo FreeRunner'a na wiele sposobów:
 
@@ -334,23 +334,23 @@ Naciśnij i przytrzymaj przycisk AUX, następnie naciśnij i przytrzymaj przycis
 W związku z ciągłym rozwojem Openmoko, deweloperzy regularnie wypuszczają aktualne wersje systemu plików, kernel'a, oraz bootloadera [[Bootloader| U-Boot]], nadające się do zaprogramowania pamięci Neo FreeRunner'a. Do zaprogramowania pamięci możesz wykorzystać kabel USB i dołączone do zestawu narzędzie do programowania.
 
 
-{{note|Zespół Openmoko tworzy obrazy każdego dnia. Jeśli chcesz wykorzystać najnowszy obraz, możesz ściągnąć go z codziennego wydania, jednak rekomendowane jest aby korzystać z najbardziej stabilnej wersji obrazu dostępnej pod adresem  http://downloads.openmoko.org/releases/Freerunner/. Obrazy te są gruntownie przetestowane przez ekipę testerów.
+{{note|Zespół Openmoko tworzy obrazy każdego dnia. Jeśli chcesz wykorzystać najnowszy obraz, możesz ściągnąć go z codziennego wydania, jednak rekomendowane jest aby korzystać z najbardziej stabilnej wersji obrazu dostępnej pod adresem  http://downloads.openmoko.org/releases/FreeRunner/. Obrazy te są gruntownie przetestowane przez ekipę testerów.
 
 Więcej na temat aktualnych obrazów znajdziesz pod adresem: http://wiki.openmoko.org/wiki/Latest_Images}}
 
 ===Krok 1. Ściąganie DFU-util===
 
 Pobierz narzędzie do flashowania:
-http://downloads.openmoko.org/releases/Freerunner/dfu-util
+http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 Na swoim systemie z GNU/Linuksem możesz wprowadzić do terminala poniższa komendę:
- wget http://downloads.openmoko.org/releases/Freerunner/dfu-util
+ wget http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 Następnie musisz nadać prawa pliku wykonalnego:
  chmod a+x dfu-util
 
 ===Krok 2. Flashowanie kernela===
-Możesz ściągnąć aktualny kernel (jądro) z http://downloads.openmoko.org/releases/Freerunner/
+Możesz ściągnąć aktualny kernel (jądro) z http://downloads.openmoko.org/releases/FreeRunner/
 
 Wprowadź do terminala opartego o system GNU/Linuks następujące komendy. W przypadku niektórych dystrybucji, aby wykonać te komendy musisz mieć uprawnienia root'a.
 
@@ -379,7 +379,7 @@ Done!
 }}
 
 ===Krok 3. Flashowanie głównego systemu plików ===
-Możesz ściągnąć aktualny system plików dostępny pod tym adresem: http://downloads.openmoko.org/releases/Freerunner/
+Możesz ściągnąć aktualny system plików dostępny pod tym adresem: http://downloads.openmoko.org/releases/FreeRunner/
 
 Wprowadź do terminala opartego o system GNU/Linuks następujące komendy. W przypadku niektórych dystrybucji aby, wykonać te komendy musisz mieć uprawnienia root'a.
 
@@ -391,13 +391,13 @@ status(0) = No error condition is present
 Done!
 
 ==Więcej informacji==
-Jeżeli chcesz dowiedzieć się więcej o Neo Freerunner, możesz odwiedzić poniższe tematy:
+Jeżeli chcesz dowiedzieć się więcej o Neo FreeRunner, możesz odwiedzić poniższe tematy:
 * [[GTA02 Openness]]
 * [[Neo FreeRunner]]
 * [[Neo FreeRunner GTA02 Hardware]]
 * [[FreeRunner/Buttons and LEDs]]
 * [[Latest_Images]]
-* [[Where_is_my_Freerunner%3F]]
+* [[Where_is_my_FreeRunner%3F]]
 * [[Distributions]]
 
 To search this wiki with Google, use the following search term:
