Replacing 'Freerunner' with 'FreeRunner'

--- a/Manuals%2FNeo_FreeRunner%2Fru.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fru.mw
@@ -5,7 +5,7 @@
  <div align="left">
 Спасибо за покупку этого выпуска Neo FreeRunner для разработчика. Смартфон [[Neo FreeRunner]] - это второе поколение аппаратной платформы, на которой работает Openmoko. Данное руководство поможет вам получить сведения о вашем Neo FreeRunner и начать его использовать.
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Упаковка Neo FreeRunner]]
+[[Image:FreeRunner box.png|200px|thumb|Упаковка Neo FreeRunner]]
 |}
 
 == Что в коробке ==
@@ -25,7 +25,7 @@
 |}
 </div>
 
-== Сборка Neo Freerunner перед использованием, информация о физическом устройстве ==
+== Сборка Neo FreeRunner перед использованием, информация о физическом устройстве ==
 
 === Установка карты памяти Micro-SD, SIM-карты, и аккумуляторной батареи ===
 
@@ -45,7 +45,7 @@
 # Разблокируйте металлический держатель SIM-карты используя ноготь, сдвинув его вниз, в направлении разъёма USB. Действуйте с осторожностью, так как деликатный механизм может быть поврежден усилием приложенным в неправильном направлении.
 # Поднимите вверх держатель SIM-карты.
 # Держатель Micro-SD карты удерживается защёлками с обеих сторон. Проще открыть держатель Micro-SD карты отжимая защёлки с каждой стороны по очереди, чем потянув вверх за середину, так как такой способ уменьшает давление на защёлки. Для отжатия защёлок может быть использована небольшая отвёртка или нож.
-# Вставьте карту памяти Micro-SD в держатель. Обратите внимание на боковые упоры внутри металлической части держателя предназначенные для удерживания карты. Задвиньте карту внутрь держателя между упорами перед тем как закрыть держатель. Обратите внимание что электрические контакты должны быть обращены вниз и направлены к краю Neo Freerunner.
+# Вставьте карту памяти Micro-SD в держатель. Обратите внимание на боковые упоры внутри металлической части держателя предназначенные для удерживания карты. Задвиньте карту внутрь держателя между упорами перед тем как закрыть держатель. Обратите внимание что электрические контакты должны быть обращены вниз и направлены к краю Neo FreeRunner.
 # Закройте держатель Micro-SD карты, и убедитесь что обе защёлки надёжно защёлкнулись.
 # Вставьте SIM-карту в держатель SIM карты, с осторожностью задвинув карту между металлическими упорами в держателе. Обратите внимание что электрические контакты должны быть обращены вниз и метка в виде отрезанного уголка должна быть обращена в направлении разъёма внешней антены GPS.
 # Закройте держатель SIM-карты и заборкируйте его сдвинув его в направлении  разъёма внешней антены GPS.
@@ -193,7 +193,7 @@
  alsactl -f ''path-to-statefile'' restore
 
 Один способ чтобы увеличить громкость микрофона описан ниже:
-# зайдите по ssh на ваш Freerunner
+# зайдите по ssh на ваш FreeRunner
 # vi /usr/share/openmoko/scenarios/gsmhandset.state
 # отыщите "Mic2"
 # измените на "value 3"
@@ -206,7 +206,7 @@ R: Это может быть исправлено изменением файл
 Существует ручной способ переключения между динамиком и наушниками:
 Запустите alsamixer, переместитесь вдоль направо пока вы не найдёте "Amp Spk" и заглушите его  (кнопка m), после этого звучать будут оба канала наушников а не динамик.
 
-[[Freerunner_Hardware_Issues]]
+[[FreeRunner_Hardware_Issues]]
 
 === Доступ к карте памяти microSD ===
 
@@ -367,7 +367,7 @@ R: Это может быть исправлено изменением файл
 
 === Добро пожаловать в сообщество ===
 
-Выпуск Freerunner летом 2008 привёл сообщество к новому периоду быстрого роста. Доступные ресурсы суммированы на странице [[Openmoko:Community_Portal]]. Настали захватывающие и интересные времена изменения баланса между хаосом и порядком.
+Выпуск FreeRunner летом 2008 привёл сообщество к новому периоду быстрого роста. Доступные ресурсы суммированы на странице [[Openmoko:Community_Portal]]. Настали захватывающие и интересные времена изменения баланса между хаосом и порядком.
 
 Используйте как отправную точку [[http://lists.openmoko.org/pipermail/community/ список рассылки сообщества]], корторый, вероятно, является наиболее активным. На июль 2008, его объем составляет десятки сообщений в сутки. Разработчики Openmoko так же там присутствуют. Вы можете обратиться за помощью в [[https://lists.openmoko.org/mailman/listinfo/support поддержку - список рассылки]].
 
