--- a/Manuals%2FNeo_FreeRunner%2Fse.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fse.mw
@@ -8,7 +8,7 @@ __NOEDITSECTION__
 Tack för att du köpt denna utvecklarversion av Neo FreeRunner. [[Neo FreeRunner]]-telefonen är den andra hårdvaruplattformen som baseras på Openmoko. Denna handledning hjälper dig att lära känna din Neo FreeRunner och att komma igång med den.
 
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |
-[[Image:Freerunner box.png|200px|thumb|Neo FreeRunner-lådan]]
+[[Image:FreeRunner box.png|200px|thumb|Neo FreeRunner-lådan]]
 |}
 
 
@@ -142,21 +142,21 @@ Tryck och håll AUX-knappen, och tryck och håll därefter av/på-knappen. Släp
 ==Flasha Neo FreeRunner==
 Allteftersom Openmokoutvecklingen fortgår släpps regelbundet uppdaterade versioner av rootfilsystemet, kärnan och [[Bootloader|bootladdaren U-boot]]. Dessa kan installeras i flashminnet hos Neo FreeRunner. Du kan använda USB-kabeln och Openmokoverktygen för att flasha Neo FreeRunner.
 
-{{note|Openmokos mjukvaruteam bygger nya mjukvaruimagear dagligen. Om du vill använda den senaste imagen kan du ladda ned den från det dagliga bygget, men vi rekommenderar att du laddar ned den stabilaste imagen från http://downloads.openmoko.org/releases/Freerunner/. Dessa imagear har testats av testteamet.}}
+{{note|Openmokos mjukvaruteam bygger nya mjukvaruimagear dagligen. Om du vill använda den senaste imagen kan du ladda ned den från det dagliga bygget, men vi rekommenderar att du laddar ned den stabilaste imagen från http://downloads.openmoko.org/releases/FreeRunner/. Dessa imagear har testats av testteamet.}}
 
 ===Steg 1. Ladda ned DFU-util===
 
 Du kan ladda ned flashverktyget från: 
-http://downloads.openmoko.org/releases/Freerunner/dfu-util
+http://downloads.openmoko.org/releases/FreeRunner/dfu-util
 
 På ett GNU/Linux-system kan du använda följande kommando för att ladda ned dfu-util:
 
- wget http://downloads.openmoko.org/releases/Freerunner/dfu-util
+ wget http://downloads.openmoko.org/releases/FreeRunner/dfu-util
  
 ===Steg 2. Flasha kärnan===
 
 Du kan ladda ned kärnan från
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/FreeRunner/
 
 Skriv in följande kommando i en terminal på din GNU/Linux-dator.
  ./dfu-util -a (partionsnamn) -R -D (nedladdad fil)
@@ -187,7 +187,7 @@ Done!
 
 ===Step 3. Flashing Root Filesystem ===
 You can download the root filesystem from :
-http://downloads.openmoko.org/releases/Freerunner/
+http://downloads.openmoko.org/releases/FreeRunner/
 
 Type in the following command in the terminal of a GNU/Linux host.
 
