--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -71,7 +71,7 @@ On the GTA01, the Hammerhead are configured that connected with the host process
 
 == GPS on GTA02 ==
 
-To get gpsd working on the Neo Freerunner you have to run the following commands:
+To get gpsd working on the Neo FreeRunner you have to run the following commands:
 
  echo "GPS_DEV=\"/dev/ttySAC1\"" > /etc/default/gpsd
  /etc/init.d/gpsd restart
