Replacing 'Freerunner' with 'FreeRunner'

--- a/Gpsdrive%2Fcs.mw
+++ b/Gpsdrive%2Fcs.mw
@@ -17,7 +17,7 @@ opkg install gpsdrive-maps		   # zakladni mapy
 </pre>
 
 Pokud po nainstalovani budete příliš horliví a rovnou jej spustite - neuspějete.
-Jestlize je to Vase prvni setkani s GPS na Freerunneru, tak je potreba upravit [[Gpsd#GPS_on_GTA02]] cestu k gps zarizeni. Dále rogramu bude chybet soubor /usr/share/gpsdrive/map_koord.txt stačí jej přes "touch" vytvořit. Pak uz je možné spustit gps a i samotný program.
+Jestlize je to Vase prvni setkani s GPS na FreeRunneru, tak je potreba upravit [[Gpsd#GPS_on_GTA02]] cestu k gps zarizeni. Dále rogramu bude chybet soubor /usr/share/gpsdrive/map_koord.txt stačí jej přes "touch" vytvořit. Pak uz je možné spustit gps a i samotný program.
 Pravděpodobně ho budete chtit (zatím) spustit z konzole:
 
 <pre>
